# world-id-telegram

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml
.github/workflows/: ci.yml  release.yml  relyance-sci.yml
src/: config.rs  main.rs
src/bot/: commands.rs  mod.rs
src/bot/join_check/: mod.rs
src/server/: mod.rs
