[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
readme = "README.md"
name = "world-id-telegram"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
repository = "https://github.com/worldcoin/world-id-telegram"
description = "Add sybil-resistance to Telegram groups with World ID."
keywords = [
    "telegram",
    "bot",
    "captcha",
    "group",
    "supergroup",
    "world-id",
    "worldcoin",
]

[dependencies]
log = "0.4"
rand = "0.8"
url = "2.4.1"
axum = "0.7.3"
indoc = "2.0.4"
dashmap = "5.5"
dotenvy = "0.15.7"
serde_with = "3.3"
reqwest = "0.11.22"
posthog-rs = "0.2.2"
serde_json = "1.0.108"
humantime-serde = "1.1"
pretty_env_logger = "0.5"
tokio = { version = "1.32", features = ["full"] }
config = { version = "0.13", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.12", features = ["macros"] }
